--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,5 @@
 {
-  "name": "vendor_name/package_name",
-  "description": "description_text",
-  "minimum-stability": "stable",
-  "license": "proprietary",
-  "authors": [
-    {
-      "name": "author's name",
-      "email": "email@example.com"
-    }
-  ]
+  "require": {
+    "yiisoft/yii2": "*"
+  }
 }
